Set project for Gradle and Intellij and fix bug about Simiam not being configured in the UI