@@ -1,6 +1,5 @@
 package br.ufsc.ine.leb.roza.ui.model;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 import java.util.function.Supplier;
@@ -23,12 +22,12 @@ public class TestClassFieldsModel extends TestClassAbstractModel<Field> {
 
 	@Override
 	protected List<Supplier<String>> getColumnTitleMappers() {
-		return Arrays.asList(() -> "Type", () -> "Name");
+		return List.of(() -> "Type", () -> "Name");
 	}
 
 	@Override
 	protected List<Function<Field, String>> getValueMappers() {
-		return Arrays.asList(field -> field.getType(), field -> field.getName());
+		return List.of(Field::getType, Field::getName);
 	}
 
 }
