@@ -1,6 +1,5 @@
 package br.ufsc.ine.leb.roza.ui.model;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.Function;
 import java.util.function.Supplier;
@@ -18,12 +17,12 @@ public class TestClassSetupsModel extends TestClassAbstractModel<SetupMethod> {
 
 	@Override
 	protected List<Supplier<String>> getColumnTitleMappers() {
-		return Arrays.asList(() -> "Name");
+		return List.of(() -> "Name");
 	}
 
 	@Override
 	protected List<Function<SetupMethod, String>> getValueMappers() {
-		return Arrays.asList(method -> method.getName());
+		return List.of(SetupMethod::getName);
 	}
 
 	@Override
