@@ -1,7 +1,8 @@
 package br.ufsc.ine.leb.roza.utils;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 public class CollectionUtils {
@@ -11,15 +12,15 @@ public class CollectionUtils {
 	}
 
 	public <T> Set<T> set(T element) {
-		return new HashSet<>(Arrays.asList(element));
+		return new HashSet<>(Collections.singletonList(element));
 	}
 
 	public <T> Set<T> set(T first, T second) {
-		return new HashSet<>(Arrays.asList(first, second));
+		return new HashSet<>(List.of(first, second));
 	}
 
 	public <T> Set<T> set(T first, T second, T third) {
-		return new HashSet<>(Arrays.asList(first, second, third));
+		return new HashSet<>(List.of(first, second, third));
 	}
 
 }
