@@ -4,7 +4,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.math.BigDecimal;
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -18,12 +18,12 @@ class SimilarityAssessmentTest {
 
 	@BeforeEach
 	void setup() {
-		testCaseA = new TestCase("test1", Arrays.asList(), Arrays.asList());
-		testCaseB = new TestCase("test2", Arrays.asList(), Arrays.asList());
+		testCaseA = new TestCase("test1", List.of(), List.of());
+		testCaseB = new TestCase("test2", List.of(), List.of());
 	}
 
 	@Test
-	void minimumScore() throws Exception {
+	void minimumScore() {
 		SimilarityAssessment assessment = new SimilarityAssessment(testCaseA, testCaseB, BigDecimal.ZERO);
 		assertEquals(BigDecimal.ZERO, assessment.getScore());
 		assertEquals(testCaseA, assessment.getSource());
@@ -31,7 +31,7 @@ class SimilarityAssessmentTest {
 	}
 
 	@Test
-	void maximumScore() throws Exception {
+	void maximumScore() {
 		SimilarityAssessment assessment = new SimilarityAssessment(testCaseA, testCaseB, BigDecimal.ONE);
 		assertEquals(BigDecimal.ONE, assessment.getScore());
 		assertEquals(testCaseA, assessment.getSource());
@@ -39,17 +39,13 @@ class SimilarityAssessmentTest {
 	}
 
 	@Test
-	void scoreLessThanZero() throws Exception {
-		assertThrows(InvalidSimilarityScoreException.class, () -> {
-			new SimilarityAssessment(testCaseA, testCaseB, new BigDecimal(-0.5));
-		});
+	void scoreLessThanZero() {
+		assertThrows(InvalidSimilarityScoreException.class, () -> new SimilarityAssessment(testCaseA, testCaseB, BigDecimal.valueOf(-0.5)));
 	}
 
 	@Test
-	void scoreGreaterThanOne() throws Exception {
-		assertThrows(InvalidSimilarityScoreException.class, () -> {
-			new SimilarityAssessment(testCaseA, testCaseB, new BigDecimal(1.5));
-		});
+	void scoreGreaterThanOne() {
+		assertThrows(InvalidSimilarityScoreException.class, () -> new SimilarityAssessment(testCaseA, testCaseB, new BigDecimal("1.5")));
 	}
 
 }
