@@ -3,15 +3,15 @@ package br.ufsc.ine.leb.roza;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.File;
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
 class TestCaseMaterializationTest {
 
 	@Test
-	void create() throws Exception {
-		TestCase testCase = new TestCase("example", Arrays.asList(), Arrays.asList());
+	void create() {
+		TestCase testCase = new TestCase("example", List.of(), List.of());
 		TestCaseMaterialization materialization = new TestCaseMaterialization(new File("example/Example.java"), 5, testCase);
 		assertEquals("Example.java", materialization.getFileName());
 		assertEquals(5, materialization.getLength().intValue());
