@@ -3,17 +3,17 @@ package br.ufsc.ine.leb.roza;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.Test;
 
 class TestCaseTest {
 
 	@Test
-	void create() throws Exception {
+	void create() {
 		Statement fixtureStatement = new Statement("System.out.println(0);");
 		Statement assertStatement = new Statement("assertEqulas(0, 0);");
-		TestCase test = new TestCase("example", Arrays.asList(fixtureStatement), Arrays.asList(assertStatement));
+		TestCase test = new TestCase("example", List.of(fixtureStatement), List.of(assertStatement));
 		assertNotNull(test.getId());
 		assertEquals("example", test.getName());
 		assertEquals(1, test.getFixtures().size());
