@@ -3,7 +3,7 @@ package br.ufsc.ine.leb.roza.clustering;
 import static org.junit.Assert.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.Arrays;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -24,10 +24,10 @@ public class ComposedRefereeTest {
 
 	@BeforeEach
 	void setup() {
-		TestCase alpha = new TestCase("alpha", Arrays.asList(), Arrays.asList());
-		TestCase beta = new TestCase("beta", Arrays.asList(), Arrays.asList());
-		TestCase gamma = new TestCase("gamma", Arrays.asList(), Arrays.asList());
-		TestCase delta = new TestCase("delta", Arrays.asList(), Arrays.asList());
+		TestCase alpha = new TestCase("alpha", List.of(), List.of());
+		TestCase beta = new TestCase("beta", List.of(), List.of());
+		TestCase gamma = new TestCase("gamma", List.of(), List.of());
+		TestCase delta = new TestCase("delta", List.of(), List.of());
 		Cluster alphaCluster = new Cluster(alpha);
 		Cluster betaCluster = new Cluster(beta);
 		Cluster gammaCluster = new Cluster(gamma);
@@ -40,37 +40,37 @@ public class ComposedRefereeTest {
 	}
 
 	@Test
-	void withoutReferees() throws Exception {
-		assertThrows(InsufficientRefereeException.class, () -> new ComposedReferee());
+	void withoutReferees() {
+		assertThrows(InsufficientRefereeException.class, ComposedReferee::new);
 	}
 
 	@Test
-	void onlyOneReferee() throws Exception {
+	void onlyOneReferee() {
 		assertThrows(InsufficientRefereeException.class, () -> new ComposedReferee(new AnyClusterReferee()));
 	}
 
 	@Test
-	void withoutElements() throws Exception {
+	void withoutElements() {
 		Referee referee = new ComposedReferee(new SmallestClusterReferee(), new BiggestClusterReferee());
 		assertThrows(NoCombinationToChooseException.class, () -> referee.untie(collectionUtils.set()));
 	}
 
 	@Test
-	void stopAtFirst() throws Exception {
+	void stopAtFirst() {
 		Referee referee = new ComposedReferee(new SmallestClusterReferee(), new InsecureReferee());
 		Combination chosen = referee.untie(collectionUtils.set(alphaBetaCombinedDelta, gammaCombinedDelta));
 		assertEquals(chosen, gammaCombinedDelta);
 	}
 
 	@Test
-	void stopAtLast() throws Exception {
+	void stopAtLast() {
 		Referee referee = new ComposedReferee(new InsecureReferee(), new BiggestClusterReferee());
 		Combination chosen = referee.untie(collectionUtils.set(alphaBetaCombinedDelta, gammaCombinedDelta));
 		assertEquals(chosen, alphaBetaCombinedDelta);
 	}
 
 	@Test
-	void doesNotStopAtAll() throws Exception {
+	void doesNotStopAtAll() {
 		Referee referee = new ComposedReferee(new SmallestClusterReferee(), new BiggestClusterReferee());
 		assertThrows(TiebreakException.class, () -> referee.untie(collectionUtils.set(alphaBetaCombinedDelta, alphaBetaCombinedGamma)));
 	}
