@@ -4,7 +4,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.File;
 import java.math.BigDecimal;
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -18,8 +17,8 @@ import br.ufsc.ine.leb.roza.measurement.matrix.simian.SimianMatrixValueFactory;
 class MatrixTest {
 
 	@Test
-	void zeroTestCaseMaterializations() throws Exception {
-		List<TestCaseMaterialization> materializations = Arrays.asList();
+	void zeroTestCaseMaterializations() {
+		List<TestCaseMaterialization> materializations = List.of();
 
 		MatrixValueFactory<TestCaseMaterialization, Intersector> factory = new SimianMatrixValueFactory();
 		MatrixElementToKeyConverter<TestCaseMaterialization, String> converter = new SimianMatrixElementToKeyConverter();
@@ -29,10 +28,10 @@ class MatrixTest {
 	}
 
 	@Test
-	void oneTestCaseMaterializations() throws Exception {
-		TestCase testCase = new TestCase("test", Arrays.asList(), Arrays.asList());
+	void oneTestCaseMaterializations() {
+		TestCase testCase = new TestCase("test", List.of(), List.of());
 		TestCaseMaterialization materialization = new TestCaseMaterialization(new File("Materialization.java"), 10, testCase);
-		List<TestCaseMaterialization> materializations = Arrays.asList(materialization);
+		List<TestCaseMaterialization> materializations = List.of(materialization);
 
 		SimianMatrixValueFactory factory = new SimianMatrixValueFactory();
 		MatrixElementToKeyConverter<TestCaseMaterialization, String> converter = new SimianMatrixElementToKeyConverter();
@@ -43,12 +42,12 @@ class MatrixTest {
 	}
 
 	@Test
-	void twoTestCaseMaterializationsWithDefaultValues() throws Exception {
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(), Arrays.asList());
+	void twoTestCaseMaterializationsWithDefaultValues() {
+		TestCase testCaseA = new TestCase("testA", List.of(), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(), List.of());
 		TestCaseMaterialization materializationA = new TestCaseMaterialization(new File("MaterializationA.java"), 10, testCaseA);
 		TestCaseMaterialization materializationB = new TestCaseMaterialization(new File("MaterializationB.java"), 10, testCaseB);
-		List<TestCaseMaterialization> materializations = Arrays.asList(materializationA, materializationB);
+		List<TestCaseMaterialization> materializations = List.of(materializationA, materializationB);
 
 		SimianMatrixValueFactory factory = new SimianMatrixValueFactory();
 		MatrixElementToKeyConverter<TestCaseMaterialization, String> converter = new SimianMatrixElementToKeyConverter();
@@ -62,12 +61,22 @@ class MatrixTest {
 	}
 
 	@Test
-	void twoTestCaseMaterializationsSettingValues() throws Exception {
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(), Arrays.asList());
+	void twoTestCaseMaterializationsSettingValues() {
+		TestCase testCaseA = new TestCase("testA", List.of(), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(), List.of());
 		TestCaseMaterialization materializationA = new TestCaseMaterialization(new File("MaterializationA.java"), 10, testCaseA);
 		TestCaseMaterialization materializationB = new TestCaseMaterialization(new File("MaterializationB.java"), 10, testCaseB);
-		List<TestCaseMaterialization> materializations = Arrays.asList(materializationA, materializationB);
+		Matrix<TestCaseMaterialization, String, Intersector> matrix = getTestCaseMaterializationStringIntersectorMatrix(materializationA, materializationB);
+
+		assertEquals(4, matrix.getPairs().size());
+		assertEquals(BigDecimal.ONE, matrix.get(materializationA.getAbsoluteFilePath(), materializationA.getAbsoluteFilePath()).evaluate());
+		assertEquals(new BigDecimal("0.4"), matrix.get(materializationA.getAbsoluteFilePath(), materializationB.getAbsoluteFilePath()).evaluate());
+		assertEquals(new BigDecimal("0.6"), matrix.get(materializationB.getAbsoluteFilePath(), materializationA.getAbsoluteFilePath()).evaluate());
+		assertEquals(BigDecimal.ONE, matrix.get(materializationB.getAbsoluteFilePath(), materializationB.getAbsoluteFilePath()).evaluate());
+	}
+
+	private static Matrix<TestCaseMaterialization, String, Intersector> getTestCaseMaterializationStringIntersectorMatrix(TestCaseMaterialization materializationA, TestCaseMaterialization materializationB) {
+		List<TestCaseMaterialization> materializations = List.of(materializationA, materializationB);
 
 		Intersector intersectorAB = new Intersector(10);
 		Intersector intersectorBA = new Intersector(10);
@@ -80,12 +89,7 @@ class MatrixTest {
 
 		matrix.set(materializationA.getAbsoluteFilePath(), materializationB.getAbsoluteFilePath(), intersectorAB);
 		matrix.set(materializationB.getAbsoluteFilePath(), materializationA.getAbsoluteFilePath(), intersectorBA);
-
-		assertEquals(4, matrix.getPairs().size());
-		assertEquals(BigDecimal.ONE, matrix.get(materializationA.getAbsoluteFilePath(), materializationA.getAbsoluteFilePath()).evaluate());
-		assertEquals(new BigDecimal("0.4"), matrix.get(materializationA.getAbsoluteFilePath(), materializationB.getAbsoluteFilePath()).evaluate());
-		assertEquals(new BigDecimal("0.6"), matrix.get(materializationB.getAbsoluteFilePath(), materializationA.getAbsoluteFilePath()).evaluate());
-		assertEquals(BigDecimal.ONE, matrix.get(materializationB.getAbsoluteFilePath(), materializationB.getAbsoluteFilePath()).evaluate());
+		return matrix;
 	}
 
 }
