@@ -1,12 +1,12 @@
 package br.ufsc.ine.leb.roza.measurement.metric;
 
-import static org.junit.Assert.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
 
 import java.math.BigDecimal;
 import java.math.MathContext;
-import java.util.Arrays;
 import java.util.Iterator;
+import java.util.List;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -48,11 +48,11 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void zeroFixtures() throws Exception {
+	void zeroFixtures() {
 		Statement assertion = new Statement("assertEquals(0, 0);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(), Arrays.asList(assertion));
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(), Arrays.asList(assertion));
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB));
+		TestCase testCaseA = new TestCase("testA", List.of(), List.of(assertion));
+		TestCase testCaseB = new TestCase("testB", List.of(), List.of(assertion));
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -77,14 +77,14 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonStartSequenceSameAssertions() throws Exception {
+	void commonStartSequenceSameAssertions() {
 		Statement fixture1 = new Statement("sut(1);");
 		Statement fixture2 = new Statement("sut(2);");
 		Statement fixture3 = new Statement("sut(3);");
 		Statement assertion = new Statement("assertEquals(0, 0);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixture1, fixture2), Arrays.asList(assertion));
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixture1, fixture3), Arrays.asList(assertion));
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB));
+		TestCase testCaseA = new TestCase("testA", List.of(fixture1, fixture2), List.of(assertion));
+		TestCase testCaseB = new TestCase("testB", List.of(fixture1, fixture3), List.of(assertion));
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -109,15 +109,15 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonStartSequenceDifferentAssertions() throws Exception {
+	void commonStartSequenceDifferentAssertions() {
 		Statement fixture1 = new Statement("sut(1);");
 		Statement fixture2 = new Statement("sut(2);");
 		Statement fixture3 = new Statement("sut(3);");
 		Statement assertion1 = new Statement("assertEquals(1, 1);");
 		Statement assertion2 = new Statement("assertEquals(2, 2);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixture1, fixture2), Arrays.asList(assertion1));
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixture1, fixture3), Arrays.asList(assertion2));
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB));
+		TestCase testCaseA = new TestCase("testA", List.of(fixture1, fixture2), List.of(assertion1));
+		TestCase testCaseB = new TestCase("testB", List.of(fixture1, fixture3), List.of(assertion2));
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -142,13 +142,13 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonShortContigousStartSequence() throws Exception {
+	void commonShortContigousStartSequence() {
 		Statement fixture1 = new Statement("sut(1);");
 		Statement fixture2 = new Statement("sut(2);");
 		Statement fixture3 = new Statement("sut(3);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixture1, fixture2), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixture1, fixture3), Arrays.asList());
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB));
+		TestCase testCaseA = new TestCase("testA", List.of(fixture1, fixture2), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(fixture1, fixture3), List.of());
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -173,16 +173,16 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonLongContigousStartSequence() throws Exception {
+	void commonLongContigousStartSequence() {
 		Statement fixture1 = new Statement("sut(1);");
 		Statement fixture2 = new Statement("sut(2);");
 		Statement fixture3 = new Statement("sut(3);");
 		Statement fixture4 = new Statement("sut(4);");
 		Statement fixture5 = new Statement("sut(5);");
 		Statement fixture6 = new Statement("sut(6);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixture1, fixture2, fixture3, fixture5), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixture1, fixture2, fixture4, fixture6), Arrays.asList());
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB));
+		TestCase testCaseA = new TestCase("testA", List.of(fixture1, fixture2, fixture3, fixture5), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(fixture1, fixture2, fixture4, fixture6), List.of());
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -207,14 +207,14 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonNonContigousSequenceAfterStart() throws Exception {
+	void commonNonContigousSequenceAfterStart() {
 		Statement fixture1 = new Statement("sut(1);");
 		Statement fixture2 = new Statement("sut(2);");
 		Statement fixture3 = new Statement("sut(3);");
 		Statement fixture4 = new Statement("sut(4);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixture1, fixture2, fixture4), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixture1, fixture3, fixture4), Arrays.asList());
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB));
+		TestCase testCaseA = new TestCase("testA", List.of(fixture1, fixture2, fixture4), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(fixture1, fixture3, fixture4), List.of());
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -239,16 +239,16 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonNonContigousSequenceSinceStart() throws Exception {
+	void commonNonContigousSequenceSinceStart() {
 		Statement fixture1 = new Statement("sut(1);");
 		Statement fixture2 = new Statement("sut(2);");
 		Statement fixture3 = new Statement("sut(3);");
 		Statement fixture4 = new Statement("sut(4);");
 		Statement fixture5 = new Statement("sut(5);");
 		Statement fixture6 = new Statement("sut(6);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixture5, fixture1, fixture2, fixture4), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixture6, fixture1, fixture3, fixture4), Arrays.asList());
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB));
+		TestCase testCaseA = new TestCase("testA", List.of(fixture5, fixture1, fixture2, fixture4), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(fixture6, fixture1, fixture3, fixture4), List.of());
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -273,12 +273,12 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonShortAsymmetricStartSequence() throws Exception {
+	void commonShortAsymmetricStartSequence() {
 		Statement fixture1 = new Statement("sut(1);");
 		Statement fixture2 = new Statement("sut(2);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixture1), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixture1, fixture2), Arrays.asList());
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB));
+		TestCase testCaseA = new TestCase("testA", List.of(fixture1), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(fixture1, fixture2), List.of());
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -303,13 +303,13 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonLongAsymmetricStartSequence() throws Exception {
+	void commonLongAsymmetricStartSequence() {
 		Statement fixture1 = new Statement("sut(1);");
 		Statement fixture2 = new Statement("sut(2);");
 		Statement fixture3 = new Statement("sut(3);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixture1), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixture1, fixture2, fixture3), Arrays.asList());
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB));
+		TestCase testCaseA = new TestCase("testA", List.of(fixture1), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(fixture1, fixture2, fixture3), List.of());
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -334,14 +334,14 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonAsymmetricStartSequenceWithoutRemainings() throws Exception {
+	void commonAsymmetricStartSequenceWithoutRemainings() {
 		Statement fixtureA = new Statement("sut(1);");
 		Statement fixtureB = new Statement("sut(2);");
 		Statement fixtureC = new Statement("sut(3);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixtureA), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixtureA, fixtureB), Arrays.asList());
-		TestCase testCaseC = new TestCase("testC", Arrays.asList(fixtureA, fixtureB, fixtureC), Arrays.asList());
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB, testCaseC));
+		TestCase testCaseA = new TestCase("testA", List.of(fixtureA), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(fixtureA, fixtureB), List.of());
+		TestCase testCaseC = new TestCase("testC", List.of(fixtureA, fixtureB, fixtureC), List.of());
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB, testCaseC));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -386,15 +386,15 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonAsymmetricStartSequenceWithFixedRemainings() throws Exception {
+	void commonAsymmetricStartSequenceWithFixedRemainings() {
 		Statement fixture1 = new Statement("sut(1);");
 		Statement fixture2 = new Statement("sut(2);");
 		Statement fixture3 = new Statement("sut(3);");
 		Statement fixture4 = new Statement("sut(4);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixture1, fixture4), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixture1, fixture2, fixture4), Arrays.asList());
-		TestCase testCaseC = new TestCase("testC", Arrays.asList(fixture1, fixture2, fixture3, fixture4), Arrays.asList());
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB, testCaseC));
+		TestCase testCaseA = new TestCase("testA", List.of(fixture1, fixture4), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(fixture1, fixture2, fixture4), List.of());
+		TestCase testCaseC = new TestCase("testC", List.of(fixture1, fixture2, fixture3, fixture4), List.of());
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB, testCaseC));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -439,17 +439,17 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonAsymmetricStartSequenceWithProportionalRemainings() throws Exception {
+	void commonAsymmetricStartSequenceWithProportionalRemainings() {
 		Statement fixture1 = new Statement("sut(1);");
 		Statement fixture2 = new Statement("sut(2);");
 		Statement fixture3 = new Statement("sut(3);");
 		Statement fixture4 = new Statement("sut(4);");
 		Statement fixture5 = new Statement("sut(5);");
 		Statement fixture6 = new Statement("sut(6);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixture1, fixture4), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixture1, fixture2, fixture4, fixture5), Arrays.asList());
-		TestCase testCaseC = new TestCase("testC", Arrays.asList(fixture1, fixture2, fixture3, fixture4, fixture5, fixture6), Arrays.asList());
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB, testCaseC));
+		TestCase testCaseA = new TestCase("testA", List.of(fixture1, fixture4), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(fixture1, fixture2, fixture4, fixture5), List.of());
+		TestCase testCaseC = new TestCase("testC", List.of(fixture1, fixture2, fixture3, fixture4, fixture5, fixture6), List.of());
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB, testCaseC));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
@@ -494,17 +494,17 @@ class LcsSimilarityMetricTest {
 	}
 
 	@Test
-	void commonAsymmetricStartSequenceWithInverselyProportionalRemainings() throws Exception {
+	void commonAsymmetricStartSequenceWithInverselyProportionalRemainings() {
 		Statement fixture1 = new Statement("sut(1);");
 		Statement fixture2 = new Statement("sut(2);");
 		Statement fixture3 = new Statement("sut(3);");
 		Statement fixture4 = new Statement("sut(4);");
 		Statement fixture5 = new Statement("sut(5);");
 		Statement fixture6 = new Statement("sut(6);");
-		TestCase testCaseA = new TestCase("testA", Arrays.asList(fixture1, fixture4, fixture5, fixture6), Arrays.asList());
-		TestCase testCaseB = new TestCase("testB", Arrays.asList(fixture1, fixture2, fixture4, fixture5), Arrays.asList());
-		TestCase testCaseC = new TestCase("testC", Arrays.asList(fixture1, fixture2, fixture3, fixture4), Arrays.asList());
-		MaterializationReport materializationReport = materializer.materialize(Arrays.asList(testCaseA, testCaseB, testCaseC));
+		TestCase testCaseA = new TestCase("testA", List.of(fixture1, fixture4, fixture5, fixture6), List.of());
+		TestCase testCaseB = new TestCase("testB", List.of(fixture1, fixture2, fixture4, fixture5), List.of());
+		TestCase testCaseC = new TestCase("testC", List.of(fixture1, fixture2, fixture3, fixture4), List.of());
+		MaterializationReport materializationReport = materializer.materialize(List.of(testCaseA, testCaseB, testCaseC));
 		SimilarityReport report = measurer.measure(materializationReport).sort(new SimilarityAssessmentComparatorByScoreSourceNameAndTargetName());
 
 		Iterator<SimilarityAssessment> iterator = report.getAssessments().iterator();
